<resources>
    <string name="app_name">Tubox Cross</string>
    <string name="ayudaUser">Ingrese su usuario</string>
    <string name="usuario_lbl">Nombre de Usuario</string>
    <string name="logo_app">Logo</string>
    <string name="pass_lbl">Contraseña</string>
    <string name="recuperarlogin_lbl">¿Desea recuperar su contraseña?</string>
    <string name="ayudaPass">Ingrese su contraseña</string>
    <string name="ayuda_contraseña_olvidada">¿Olvido su contraseña? <u>Click Aquí.</u></string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="pregunta_ayuda">Pregunta de seguridad</string>
    <string name="pregunta_color">¿Cuál es tu color favorito?</string>
    <string name="ayuda_color">Ingrese su color favorito</string>
    <string name="btnEnviar">Enviar</string>
    <string name="ayuda_respuesta">Ingrese su respuesta</string>
    <string name="ayudaConfirmarPass">Repita su contraseña</string>
    <string name="codigo">Codigo</string>
    <string name="restablecer_lbl">Restablecer contraseña</string>
    <string name="recuperacion_lbl">Recuperar contraseña</string>
    <string name="colorfav_lbl">Ingrese su color favorito</string>
    <string name="restablecer1_lbl">Cambiar Altura</string>
    <string name="restablecer2_lbl">Cambiar Peso</string>
    <string name="restablecer3_lbl">Cambiar Edad</string>
    <string name="restablecer4_lbl">Eliminar Dieta</string>
    <string name="restablecer5_lbl">Crear Dieta</string>
    <string name="ayuda_nuevoPassword">Ingrese su nueva contraseña</string>
    <string name="ayuda_nuevaAltura">Ingrese su nueva altura</string>
    <string name="ayuda_nuevaEdad">Ingrese su nueva Edad</string>
    <string name="ayuda_nuevoPeso">Ingrese su nuevo Peso</string>
    <string name="ayuda_nuevaEdadnuevamente">Ingrese su nueva Edad de nuevo</string>
    <string name="ayuda_nuevaAlturanuevamente">Ingrese su nueva altura de nuevo</string>
    <string name="ayuda_nuevoPesonuevamente">Ingrese su nuevo peso de nuevo</string>
    <string name="hintet">No se ha asignado</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnGuardar1">Guardar</string>
    <string name="btnGuardar2">Guardar</string>
    <string name="btnGuardar3">Guardar</string>
    <string name="btnGuardar4">Guardar</string>
    <string name="btnGuardar5">Guardar</string>
    <string name="acercade_lbl">AboutUs</string>
    <string name="AlturaMB_lbl">Ninguna</string>
    <string name="PesoMB_lbl">Ninguna</string>
    <string name="EdadMB_lbl">Ninguna</string>
    <string name="menu_usuario">Usuario</string>
    <string name="menu_inicio">Home</string>
    <string name="rutinas_lbl">Rutinas</string>
    <string name="dietas_lbl">Dietas</string>
    <string name="workout_description">workout</string>
    <string name="dietas_description">dietas</string>
    <string name="imc_ayuda">medida_cintura</string>
    <string name="imc_lbl">Indice de masa corporal</string>
    <string name="consejos_lbl">Consejos</string>
    <string name="perfil_lbl">Perfil</string>
    <string name="datos_personales_lbl">Datos Personales</string>
    <string name="nombre_lbl">Nombre</string>
    <string name="ejemplo_estatura">1.75 mts</string>
    <string name="ejemplo_peso">170 lbs</string>
    <string name="ejemplo_sexo">Masculino</string>
    <string name="edad_puntos">Edad:</string>
    <string name="progreso_lbl">Progreso</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="altura">Altura.  (En pies)</string>
    <string name="ingrese_su_altura">Ingrese su altura</string>
    <string name="peso">Peso.  (En KG)</string>
    <string name="ingrese_su_peso">Ingrese su peso</string>
    <string name="ingrese_su_edad">Ingrese su edad</string>
    <string name="text_masculino">Masculino</string>
    <string name="text_femenino">Femenino</string>
    <string name="sexo_textview">Seleccione su sexo</string>
    <string name="text_intenso">Intenso</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="text_resultadoparalasemana">Resultado Semanal</string>
    <string name="text_resultadoparaelmes">Resultado mensual</string>
    <string name="resultadosagrupados_textview">Seleccione sus resultados agrupados</string>
    <string name="text_moderado">Moderado</string>
    <string name="actividad_textview">Seleccione su actividad fisica</string>
    <string name="text_leve">Leve</string>
    <string name="sexo">Sexo</string>
    <string name="Edad">Edad</string>
    <string name="Resultado_lbl">Calorias diarias necesarias:</string>
    <string name="Calorias_lbl">Ninguna</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="seleccione_el_dia_que_va_a_entrenar">Seleccione el dia que va a entrenar:</string>
    <string name="domingo">Domingo</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="seleccione_la_hora_a_la_que_va_a_entrenar">Seleccione la hora a la que va a entrenar</string>
    <string name="imgdieta1">imgDieta</string>
    <string name="dieta_ayuda1">Dieta para evitar \nla perdida de peso\n o músculo</string>
    <string name="primerlink_dietas">Para mayor inf <u>  Click Aquí.</u></string>
    <string name="ayudaDieta_alim">Dieta alimenticia para \nmejorar la salud \ndiariamente</string>
    <string name="dietaPerder_peso">Dieta para ganar \nmúsculo más rápido</string>
    <string name="ayudaDieta_daibetes">Dieta para personas \ndiabeticas que se \nquieren ejercitar</string>
    <string name="jovenestirando">jovenestirando</string>
    <string name="calentamiento">Calentamiento</string>
    <string name="estiramiento">Estiramiento</string>
    <string name="estiraa">La mayoría de los calentamientos no toman mucho tiempo, solo dos o tres minutos, cinco minutos como máximo. Para beneficiarnos al máximo, un calentamiento debe trabajar los mismos músculos que ejercitaremos durante el entrenamiento principal; deben incluir ejercicios más ligeros o una versión atenuada del entrenamiento que tenemos por delante.</string>
    <string name="este">El mejor momento para estirar es después del entrenamiento cuando nuestros músculos están completamente relajados, completamente calentados y son capaces de darnos el mayor estiramiento, más fácil. Cuando los músculos están realmente bien calentados, exhiben un alto grado de plasticidad.</string>
    <string name="mejor_momento_para_hacer_ejercicio">Mejor momento para hacer ejercicio</string>
    <string name="tardemana">Estas son algunas de las ventajas de entrenar por las mañanas \n\n-Ayuda a establecer una rutina, porque entrenar a primera hora no deja sitio para las excusas por falta de tiempo. Por la tarde las obligaciones se acumulan. \n\n-Mejora el ciclo de sueño. Levantarse temprano puede costar, pero si se coge el hábito se favorecen el ritmo circadiano que hace que el cuerpo esté alerta por la mañana y cansado por la noche, lo que nos ayudará a dormir mejory esto a ganar musculatura. \n\n-Aumenta la energía. Hacer ejercicio nada más levantarnos nos activa y nos pone alerta. Y, además, favorece la concentración. \n\n-Ventajas de entrenar por las tardes/noches.\n\n-El rendimiento físico es mejor. Según las últimas investigaciones, quienes hacen ejercicio por la noche tardan hasta un 20% más en llegar al punto de agotamiento. Es decir, la fuerza muscular, la flexibilidad y la resistencia son mejores por la noche que por la mañana.\n\n-Alivia el estrés. Hacer ejercicio por la noche ayuda a librarse de las preocupaciones de la jornada. Las endorfinas que se producen con el deporte harán que lleguemos a la cama mucho más relajados.</string>
    <string name="tablaimc">tablaimc</string>
    <string name="su_indice_de_masa_corporal_es">Su indice de masa corporal es:</string>
    <string name="abdomen_lbl">Abdomen</string>
    <string name="pectorales_lbl">Pectorales</string>
    <string name="piernas_lbl">Piernas</string>
    <string name="espalda_lbl">Espalda</string>
    <string name="brazos_lbl">Brazos</string>
    <string name="abdominales_principiante">Abdominales Principiante</string>
    <string name="saltos_de_tijera">Saltos de tijera</string>
    <string name="repeticiones_n_x20">Repeticiones: \n X20</string>
    <string name="imagendeejercicio">imagendeejercicio</string>
    <string name="iconoayuda">iconoayuda</string>
    <string name="crunch">Crunch</string>
    <string name="repeticiones_n_x12_n_series_2">Repeticiones: \n X12 \n Series: 2</string>
    <string name="mountain_climbers">Mountain Climbers</string>
    <string name="repeticiones_n_x15_n_series_2">Repeticiones: \n X15 \n Series: 2</string>
    <string name="abdominales_elevados">Abdominales elevados</string>
    <string name="repeticiones_n_x12">Repeticiones: \n X12</string>
    <string name="plancha">Plancha</string>
    <string name="repeticiones_n_x20s_n_series_2">Repeticiones: \n X20s \n Series: 2</string>
    <string name="levantamiento_n_de_piernas">Levantamiento \n de piernas</string>
    <string name="repeticiones_n_x15">Repeticiones: \n X15 \n Series: 2</string>
    <string name="concluir_entrenamiento">Concluir entrenamiento.</string>
    <string name="repeticiones_n_x20s">Repeticiones: \n X20</string>
    <string name="elevacion_de_cadera">Elevacion de cadera</string>
    <string name="repeticiones_n_x20ss">Repeticiones: \n X20</string>
    <string name="abdominales_en_v">Abdominales en V</string>
    <string name="repeticiones_n_x12_n_series_4">Repeticiones: \n X12 \n Series: 4</string>
    <string name="plancha_izquierda">Plancha izquierda</string>
    <string name="pose_de_puente">Pose de puente</string>
    <string name="infoplanchalateral">-Primero de todo coloca la esterilla en el suelo y lateralmente en ella. Apoya una mano en la esterilla y la otra enganchada al cuerpo, luego elévate hasta que tengas un brazo y los pies sobre el suelo.\n -El brazo que has colocado sobre la esterilla tienes que flexionarlo y los pies deben de estar juntos. Por otro lado, las piernas mátenlas rectas intentando que el peso no caiga hacia abajo.\n -En esta posición, empieza el movimiento. Al tratarse de un ejercicio isométrico, el esfuerzo se realiza al mantener la posición. Intenta aguantar el máximo de tiempo posible en esta posición.</string>
    <string name="infoposepuente">Realiza el ejercicio de puente para fortalecer los músculos de la zona media. Recuéstate boca arriba con tus rodillas flexionadas. Contrae tus músculos abdominales. Eleva la cadera del suelo hasta que la cadera esté en línea con las rodillas y los hombros. Mantén esa posición durante tres respiraciones profundas. Vuelve a la posición inicial y repite.</string>
    <string name="calcular_dieta">Calcular dieta \n (Metabolismo basal)</string>
    <string name="eliminardieta_lbl">¿Desea eliminar su dieta?</string>
    <string name="creardieta_lbl">¿Desea agregar su dieta personalizada?</string>
    <string name="calculardieta_lbl">¿Desea calcular su dieta?</string>
    <string name="creadordedieta_lbl">Obtener dieta</string>
    <string name="calculardieta_btn">CALCULAR</string>
    <string name="altura_textview">Altura (En Pies)</string>
    <string name="peso_textview">Peso (En Kilogramos)</string>
    <string name="edad_textview">Edad</string>
    <string name="wod5_lbl_principiante">Wod 5 de baja intensidad</string>
    <string name="wod5_lbl_intermedio">Wod 5 intermedio</string>
    <string name="repeticiones30">Repeticiones: \n X30</string>
    <string name="cleanandjerk95_75">Clean and jerk \n (95/75)</string>
    <string name="cleanandjerk75_55">Clean and jerk \n (75/55)</string>
</resources>