<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bgnegro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/creadordedieta_lbl"
            android:textColor="@color/boton"
            android:textSize="28sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/calculardieta_lbl"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"></TextView>
        <Button
            android:id="@+id/restablecer6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/calculardieta_btn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/creardieta_lbl"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"></TextView>
        <Button
            android:id="@+id/restablecer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/restablecer5_lbl"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/eliminardieta_lbl"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"></TextView>
        <Button
            android:id="@+id/restablecer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/restablecer4_lbl"/>



    </LinearLayout>

</ScrollView>
