<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgnegro"
    tools:context=".TodoCuerpoPrincipiante"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/wod5_lbl_principiante"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/boton"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ejercicio1PecI"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/imagendeejercicio"
                android:src="@drawable/plancha"></ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:fontFamily="@font/poppinsbold"
                    android:paddingTop="10dp"
                    android:text="@string/cleanandjerk75_55"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/repeticiones30"
                    android:textAlignment="center"
                    android:textColor="@color/white"></TextView>

            </LinearLayout>

            <ImageButton
                android:id="@+id/infoEjer1PecI"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@color/transparente"
                android:contentDescription="@string/iconoayuda"
                android:onClick="infoplancha"
                android:src="@drawable/ic_info"
                tools:ignore="DuplicateSpeakableTextCheck"></ImageButton>

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="concluirEntreno"
            android:layout_marginTop="10dp"
            android:id="@+id/btnTCconcluirPrin"
            android:text="@string/concluir_entrenamiento">
        </Button>

    </LinearLayout>

</ScrollView>