<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bgnegro"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".PosePuente">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plancha"
        android:contentDescription="@string/imagendeejercicio"
        android:src="@drawable/posepuente"
        >
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="15dp"
        android:text="@string/pose_de_puente"
        android:textColor="@color/boton"
        android:fontFamily="@font/poppinsbold">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/infoposepuente"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/poppinsbold"
        android:justificationMode="inter_word"
        android:textSize="18sp"
        tools:ignore="UnusedAttribute">
    </TextView>

</LinearLayout>